Reorganized the projects structure
