# src/main/java/service/Models/Instance/InstanceController/Requests/DeleteInstanceRequest.java
@@ -1,4 +1,0 @@
-package service.Models.Instance.InstanceController.Requests;
-
-public record DeleteInstanceRequest(Long id) {
-}
