# src/main/java/service/Models/Instance/Requests/CreateInstanceRequest.java
@@ -1,4 +1,4 @@
-package service.Models.Instance.InstanceController.Requests;
+package service.Models.Instance.Requests;
 
 public record CreateInstanceRequest(Long id, String name) {
 }
