# src/main/java/service/Models/InstanceType/InstanceTypeController/Requests/DeleteInstanceTypeRequest.java
@@ -1,4 +1,0 @@
-package service.Models.InstanceType.InstanceTypeController.Requests;
-
-public record DeleteInstanceTypeRequest(Long id) {
-}
