# src/main/resources/openapi.yaml
@@ -62,7 +62,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/InstanceTypeDTO'
+                $ref: '#/components/schemas/InstanceDTO'
   /api/propertyType/getTypes/{instanceTypeId}:
     get:
       tags:
@@ -105,7 +105,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/PropertyDTO'
-  /api/property/getInstances/{typeId}:
+  /api/instanceType/getTypes:
+    get:
+      tags:
+        - instance-type-controller
+      operationId: getInstanceTypes
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/InstanceTypeDTO'
+  /api/instance/getInstances/{typeId}:
     get:
       tags:
         - instance-controller
@@ -125,35 +139,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/InstanceTypeDTO'
-  /api/instanceType/getTypes:
-    get:
-      tags:
-        - instance-type-controller
-      operationId: getInstanceTypes
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/InstanceTypeDTO'
-  /api/instance/getAll:
-    get:
-      tags:
-        - instance-controller
-      operationId: getAllInstances
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/InstanceTypeDTO'
+                  $ref: '#/components/schemas/InstanceDTO'
   /api/instance/get/{id}:
     get:
       tags:
@@ -172,7 +158,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/InstanceTypeDTO'
+                $ref: '#/components/schemas/InstanceDTO'
   /api/instanceType/delete/{id}:
     delete:
       tags:
@@ -230,6 +216,14 @@ components:
         name:
           type: string
     CreateInstanceRequest:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+    InstanceDTO:
       type: object
       properties:
         id:
